Added transactions with an Array
