# src/swagger-output.json
@@ -268,6 +268,257 @@
           }
         }
       }
+    },
+    "/api/v1/transactionsArray/": {
+      "get": {
+        "tags": [
+          "Transactions"
+        ],
+        "description": "Get All Transactions",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "description": "Transaction Info",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Carlos Jam"
+                },
+                "age": {
+                  "type": "number",
+                  "example": 25
+                },
+                "city": {
+                  "type": "string",
+                  "example": "New York"
+                },
+                "sin": {
+                  "type": "string",
+                  "example": "123456783"
+                },
+                "creditCardNumber": {
+                  "type": "string",
+                  "example": "9999777712340069"
+                },
+                "creditCardType": {
+                  "type": "string",
+                  "example": "Visa"
+                },
+                "amount": {
+                  "type": "number",
+                  "example": 800
+                }
+              },
+              "required": [
+                "name",
+                "age",
+                "city",
+                "sin",
+                "creditCardNumber",
+                "creditCardType",
+                "amount"
+              ]
+            }
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "select",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Transactions"
+        ],
+        "description": "Generate a new transaction",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "description": "Transaction Info",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "Carlos Jam"
+                },
+                "age": {
+                  "type": "number",
+                  "example": 25
+                },
+                "city": {
+                  "type": "string",
+                  "example": "New York"
+                },
+                "sin": {
+                  "type": "string",
+                  "example": "123456783"
+                },
+                "creditCardNumber": {
+                  "type": "string",
+                  "example": "9999777712340069"
+                },
+                "creditCardType": {
+                  "type": "string",
+                  "example": "Visa"
+                },
+                "amount": {
+                  "type": "number",
+                  "example": 800
+                }
+              },
+              "required": [
+                "name",
+                "age",
+                "city",
+                "sin",
+                "creditCardNumber",
+                "creditCardType",
+                "amount"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Transaction created",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "success": {
+                  "type": "boolean",
+                  "example": true
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "_id": {
+                      "type": "string",
+                      "example": "3"
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "Carlos Jam"
+                    },
+                    "age": {
+                      "type": "number",
+                      "example": 25
+                    },
+                    "city": {
+                      "type": "string",
+                      "example": "New York"
+                    },
+                    "sin": {
+                      "type": "string",
+                      "example": "123456783"
+                    },
+                    "creditCardNumber": {
+                      "type": "string",
+                      "example": "9999777712340069"
+                    },
+                    "creditCardType": {
+                      "type": "string",
+                      "example": "Visa"
+                    },
+                    "amount": {
+                      "type": "number",
+                      "example": 800
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "400": {
+            "description": "Incorrect Information"
+          }
+        }
+      }
+    },
+    "/api/v1/transactionsArray/{id}": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
     }
   }
 }
